tests/run/error_field_nonstruct.em
// error_field_nonstruct.em — field access requires a struct value.
fn main() -> int { let n = 5  return n.x }
